tone.vol + fxsend + fxreturn

--- a/htmDePruebas.html
+++ b/htmDePruebas.html
@@ -7,7 +7,7 @@
     <title>Web Audio API Example</title>
 </head>
 <body>
-    <h1>Tone.js Test Volumen</h1>
+    <h1>Tone.js Test Volumen + FX Send + FX Return</h1>
 
     <button id="playButton" onclick="startsSong()">Iniciar </button>
 
@@ -15,7 +15,17 @@
     <p id="volume_key_text"></p>
     <p id="volume_key_value"></p>
     <input type='range' min=-60 max=0 step='1' 
-    value=1 id='volume_key'>
+    value=-60 id='volume_key'>
+    <br>
+    <p id="fxsend_key_text"></p>
+    <p id="fxsend_key_value"></p>
+    <input type='range' min=-60 max=0 step='1' 
+    value=-60 id='fxsend_key'>
+    <br>
+    <p id="fxreturn_key_text"></p>
+    <p id="fxreturn_key_value"></p>
+    <input type='range' min=-60 max=0 step='1' 
+    value=-60 id='fxreturn_key'>
     <br>
 
 
