--- a/htmDePruebas.html
+++ b/htmDePruebas.html
@@ -27,8 +27,21 @@
     <input type='range' min=-60 max=0 step='1' 
     value=-60 id='fxreturn_key'>
     <br>
-
-
+    <p id="volume_bd_text"></p>
+    <p id="volume_bd_value"></p>
+    <input type='range' min=-60 max=0 step='1' 
+    value=-60 id='volume_bd'>
+    <br>
+    <p id="fxsend_bd_text"></p>
+    <p id="fxsend_bd_value"></p>
+    <input type='range' min=-60 max=0 step='1' 
+    value=-60 id='fxsend_bd'>
+    <br>
+    <p id="fxreturn_bd_text"></p>
+    <p id="fxreturn_bd_value"></p>
+    <input type='range' min=-60 max=0 step='1' 
+    value=-60 id='fxreturn_bd'>
+    <br>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js" integrity="sha512-jduERlz7En1IUZR54bqzpNI64AbffZWR//KJgF71SJ8D8/liKFZ+s1RxmUmB+bhCnIfzebdZsULwOrbVB5f3nQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
