Panner 3D 1st try TONE.JS

--- a/Tone_Fx_&_Instruments.html
+++ b/Tone_Fx_&_Instruments.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Tone.js Test Volumen + FX Send + FX Return</h1>
 
-    <button id="playButton" onclick="startsSong()">Iniciar </button>
-
+    <button id="contextButton" onclick="createsContext()">Iniciar CONTEXT </button>
+    <button id="playButton" onclick="startsSong()">Iniciar SONG </button>
 
     <p id="volume_key_text"></p>
     <p id="volume_key_value"></p>
@@ -45,7 +45,7 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js" integrity="sha512-jduERlz7En1IUZR54bqzpNI64AbffZWR//KJgF71SJ8D8/liKFZ+s1RxmUmB+bhCnIfzebdZsULwOrbVB5f3nQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="js/Tone_Fx_&_Instruments.js"></script>
+    <script src="js/panner_3d_1st_ try.js"></script>
     <!--
     <script src="https://unpkg.com/tone"></script>
     -->
