Panner 3D 1st try TONE.JS

--- a/spatialPanner.html
+++ b/spatialPanner.html
@@ -29,7 +29,7 @@
 		</div>
 
 		<div id="content">
-			<tone-play-toggle></tone-play-toggle>
+			<tone-play-toggle>TONBO</tone-play-toggle>
 			<tone-slider 
 				label="x"
 				id="xSlider"
