--- a/Tone_Fx_&_Instruments.html
+++ b/Tone_Fx_&_Instruments.html
@@ -11,6 +11,7 @@
 
     <button id="contextButton" onclick="createsContext()">Iniciar CONTEXT </button>
     <button id="playButton" onclick="startsSong()">Iniciar SONG </button>
+    <button id="recordButton" onclick="recordear()">recordear </button>
 
     <p id="volume_key_text"></p>
     <p id="volume_key_value"></p>
