--- a/4Sources4Fx.html
+++ b/4Sources4Fx.html
@@ -18,8 +18,20 @@
                     <select name="song" id="song">
                         <option name="01" id="01" value="01 Dark Ringy Short Loop">01 Dark Ringy Short Loop</option>
                         <option name="02" id="02" value="02 Hard Acople Amb Song">02 Hard Acople Amb Song</option>
-                        <option name="03" id="03" value="03 Phased Sleppy Noise Loop">03 Phased Sleppy Noise Loop</option>
-                        <option name="04" id="04" value="04 Ruido Digital Zarpado Loop">04 Ruido Digital Zarpado Loop</option>
+                        <option name="03" id="03" value="03 Phased Sleppy Noise Loop">03 Phased Sleppy Noise Loop
+                        </option>
+                        <option name="04" id="04" value="04 Ruido Digital Zarpado Loop">04 Ruido Digital Zarpado Loop
+                        </option>
+
+                        <option name="05" id="05" value="05 Deep Dark Amb Slow Loop">05 Deep Dark Amb Slow Loop</option>
+                        <option name="06" id="06" value="06 Ringy Dark Slow Amb Loop">06 Ringy Dark Slow Amb Loop
+                        </option>
+                        <option name="07" id="07" value="07 Calm Mellow Slow Amb Song">07 Calm Mellow Slow Amb Song
+                        </option>
+                        <option name="08" id="08" value="08 Digi Noise Reverb Loop">08 Digi Noise Reverb Loop</option>
+                        <option name="09" id="09" value="09 Digi Clippy Slow Loop">09 Digi Clippy Slow Loop</option>
+                        <option name="10" id="10" value="10 Pulse Burst Revb Slow Song">10 Pulse Burst Revb Slow Song
+                        </option>
                     </select>
                 </div>
                 <div>
