--- a/step 1 simple player.html
+++ b/step 1 simple player.html
@@ -9,7 +9,9 @@
 <body>
     <h1>etereal_noises</h1>
 
-    <button id="playButton" onclick="startsSong()">Iniciar </button>
+    <button id="playButton" onclick="play1()">play1 </button>
+    <button id="playButton" onclick="play2()">play2</button>
+    <button id="playButton" onclick="play3()">play3 </button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js" integrity="sha512-jduERlz7En1IUZR54bqzpNI64AbffZWR//KJgF71SJ8D8/liKFZ+s1RxmUmB+bhCnIfzebdZsULwOrbVB5f3nQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/step_1_simple_player.js"></script>
