Audio_Naming_w_underscore

--- a/step 1 simple player.html
+++ b/step 1 simple player.html
@@ -7,7 +7,7 @@
     <title>Web Audio API Example</title>
 </head>
 <body>
-    <h1>etereal_noises</h1>
+    <h1>step_1_simple_player</h1>
 
     <button id="playButton" onclick="play1()">play1 </button>
     <button id="playButton" onclick="play2()">play2</button>
