Audio_Naming_w_underscore

--- a/step 1 simple player.html
+++ b/step 1 simple player.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-    <title>Web Audio API Example</title>
+    <title>Step 1 Tone.js Example</title>
 </head>
 <body>
-    <h1>step_1_simple_player</h1>
+    <h1>Step 1 simple player</h1>
 
     <button id="playButton" onclick="play1()">play1 </button>
     <button id="playButton" onclick="play2()">play2</button>
