--- a/step 2.html
+++ b/step 2.html
@@ -7,13 +7,13 @@
     <title>Web Audio API Example</title>
 </head>
 <body>
-    <h1>step_1_simple_player</h1>
+    <h1>Step 2 </h1>
 
     <button id="playButton" onclick="play1()">play1 </button>
     <button id="playButton" onclick="play2()">play2</button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js" integrity="sha512-jduERlz7En1IUZR54bqzpNI64AbffZWR//KJgF71SJ8D8/liKFZ+s1RxmUmB+bhCnIfzebdZsULwOrbVB5f3nQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="js/step_1_simple_player.js"></script>
+    <script src="js/step_2.js"></script>
     <!--
     <script src="https://unpkg.com/tone"></script>
     -->
