--- a/step 2.html
+++ b/step 2.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-    <title>Web Audio API Example</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+  <title>Web Audio API Example</title>
 </head>
+
 <body>
-    <h1>Step 2 </h1>
+  <h1>Step 2  Player + Channel (w/commands)</h1>
+  <button id="playButton" onclick="start()">Start </button>
+  <br>
+    <button id="muteButton" onclick="mute1()">mute1 </button>
+  <button id="soloButton" onclick="solo1()">solo1 </button>
+  <button id="playButton" onclick="play1()">play1 </button>
+  <br>
+  <br>
+  <br>
 
-    <button id="playButton" onclick="play1()">play1 </button>
-    <button id="playButton" onclick="play2()">play2</button>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js" integrity="sha512-jduERlz7En1IUZR54bqzpNI64AbffZWR//KJgF71SJ8D8/liKFZ+s1RxmUmB+bhCnIfzebdZsULwOrbVB5f3nQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="js/step_2.js"></script>
-    <!--
+  <p id="volume_1_text"></p>
+  <p id="volume_1_value"></p>
+  <input type='range' min=0 max=1 step='0.01' value="0" id='volume_1'>
+  <p id="duration_1_value"></p> 
+  <p id="duration_1_text">           </p>
+  <br>
+
+  <p id="pan_1_text"></p>
+  <p id="pan_1_value"></p>
+  <input type='range' min=-1 max=1 step='0.01' value=0 id='pan_1'>
+
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"
+    integrity="sha512-jduERlz7En1IUZR54bqzpNI64AbffZWR//KJgF71SJ8D8/liKFZ+s1RxmUmB+bhCnIfzebdZsULwOrbVB5f3nQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="js/step_2.js"></script>
+  <!--
     <script src="https://unpkg.com/tone"></script>
     -->
 </body>
+
 </html>
