--- a/step 2.html
+++ b/step 2.html
@@ -10,26 +10,21 @@
 
 <body>
   <h1>Step 2  Player + Channel (w/commands)</h1>
-  <button id="playButton" onclick="start()">Start </button>
+  <button id="startButton" onclick="start()">Start </button>
   <br>
-    <button id="muteButton" onclick="mute1()">mute1 </button>
+  <button id="muteButton" onclick="mute1()">mute1 </button>
   <button id="soloButton" onclick="solo1()">solo1 </button>
   <button id="playButton" onclick="play1()">play1 </button>
-  <br>
-  <br>
-  <br>
-
-
+  <br> <br> <br>
   <p id="volume_1_text"></p>
   <p id="volume_1_value"></p>
-  <input type='range' min=0 max=1 step='0.01' value="0" id='volume_1'>
+  <input type='range' min=0 max=100 step='1' value="0" id='volume_1'>
   <p id="duration_1_value"></p> 
   <p id="duration_1_text">           </p>
   <br>
-
   <p id="pan_1_text"></p>
   <p id="pan_1_value"></p>
-  <input type='range' min=-1 max=1 step='0.01' value=0 id='pan_1'>
+  <input type='range' min=-1 max=1 step='0.02' value=0 id='pan_1'>
 
 
 
