--- a/step 2.html
+++ b/step 2.html
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
+  <meta http-equiv="" X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-  <title>Web Audio API Example</title>
+  <link rel="icon" href="img/html.ico">
+  <link rel="STYLESHEET" href="css/steps.css">
+  <title>Step 2</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <h1>Step 2  Player + Channel (w/commands)</h1>
-  <button id="startButton" onclick="start()">Start </button>
-  <br>
   <button id="muteButton" onclick="mute1()">mute1 </button>
   <button id="soloButton" onclick="solo1()">solo1 </button>
   <button id="playButton" onclick="play1()">play1 </button>
-  <br> <br> <br>
   <p id="volume_1_text"></p>
+  <input type='range' min=-40 max=12 step='1' value="0" id='volume_1'>
   <p id="volume_1_value"></p>
-  <input type='range' min=0 max=100 step='1' value="0" id='volume_1'>
+ 
   <p id="duration_1_value"></p> 
   <p id="duration_1_text">           </p>
-  <br>
   <p id="pan_1_text"></p>
-  <p id="pan_1_value"></p>
   <input type='range' min=-1 max=1 step='0.02' value=0 id='pan_1'>
+  <p id="pan_1_value"></p>
+  <p id="playback_rate_1_text"></p>
+  <input type='range' min=0.1 max=1 step='0.01' value=1 id='playback_rate_1'>
+  <p id="playback_rate_1_value"></p>
+<br>
+Loop
+  <input class="checkbox" type="checkbox" name="loop_checkbox" id="loop_checkbox">
+  <br>  <br>  <br>
+  {  <br>
+    onload : Tone.noOp ,  <br>
+    autostart : false ,  <br>
+    loopStart : 0 ,  <br>
+    loopEnd : 0 ,  <br>
+    reverse : false ,  <br>
+    fadeIn : 0 ,  <br>
+    fadeOut : 0  <br>
+    }
 
 
 
