--- a/step 2.html
+++ b/step 2.html
@@ -14,6 +14,10 @@
 
 <body>
   <h1>Step 2  Player + Channel (w/commands)</h1>
+  <h1> https://www.drumha.us/?preset=q6nR9mIInuW</h1>
+  <br>
+  <p id="player_1_label"></p>
+  <br>
   <button id="muteButton" onclick="mute1()">mute1 </button>
   <button id="soloButton" onclick="solo1()">solo1 </button>
   <button id="playButton" onclick="play1()">play1 </button>
@@ -30,20 +34,24 @@
   <input type='range' min=0.1 max=1 step='0.01' value=1 id='playback_rate_1'>
   <p id="playback_rate_1_value"></p>
 <br>
-Loop
-  <input class="checkbox" type="checkbox" name="loop_checkbox" id="loop_checkbox">
-  <br>  <br>  <br>
-  {  <br>
-    onload : Tone.noOp ,  <br>
-    autostart : false ,  <br>
-    loopStart : 0 ,  <br>
-    loopEnd : 0 ,  <br>
-    reverse : false ,  <br>
-    fadeIn : 0 ,  <br>
-    fadeOut : 0  <br>
-    }
-
-
+  <input class="checkbox" type="checkbox" name="loop_1_checkbox" id="loop_1_checkbox">
+  <p id="loop_checkbox_text"></p>
+  <input class="checkbox" type="checkbox" name="autoplay_checkbox" id="autoplay_1_checkbox">
+  <p id="autoplay_1_text"></p>
+    <input class="checkbox" type="checkbox" name="reverse_1_checkbox" id="reverse_1_checkbox">
+  <p id="reverse_1_text"></p>
+<br><br>
+  <p id="loop_start_1_text"></p>
+  <p id="loop_start_1_time"></p>
+  <br>
+  <p id="loop_end_1_text"></p>
+  <p id="loop_end_1_time"></p>
+  <br>  
+  <p id="fadeIn_1_text"></p> <p id="fadeIn_1_value"></p>
+  <br>
+  <p id="fadeOut_1_text"></p> <p id="fadeOut_1_value"></p>
+  
+  <br>  <br>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"
     integrity="sha512-jduERlz7En1IUZR54bqzpNI64AbffZWR//KJgF71SJ8D8/liKFZ+s1RxmUmB+bhCnIfzebdZsULwOrbVB5f3nQ=="
