noads lista links intento 1

--- a/noads.html
+++ b/noads.html
@@ -22,20 +22,14 @@
             <iframe id="frame" width="260" height="115" title="YouTube video player" frameborder="4"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-
-                <sidebar class="sidebar" id="sidebar derecha">
-                    Links
-                    <div class="playlist" id="playlist"> </div>
-                  </sidebar>
-
-
-
         </main>
-    
 
-      
+        <sidebar class="sidebar" id="sidebar derecha">
+            Links
+            <div class="playlist" id="playlist">
 
+            </div>
+        </sidebar>
     </div>
 
 
