noads lista links funciona

--- a/noads.html
+++ b/noads.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/noads.css">
-    <title>Inicio</title>
+    <title>NO Ads HTML</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
@@ -18,7 +18,7 @@
             <button id="play_btn" onclick="cargarLink()">Aceptar</button>
         </header>
         <main class="main">
-            <br>CREAR LISTA DE LINKS PROPIA <br>
+            <br>HACER LINKS DE LISTA OBJETOS DRAGGABLES<br>
             <iframe id="frame" width="260" height="115" title="YouTube video player" frameborder="4"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -33,7 +33,7 @@
     </div>
 
 
-    <script src="js/index.js"></script>
+    <script src="js/noads.js"></script>
 </body>
 
 </html>
