--- a/step_3.html
+++ b/step_3.html
@@ -147,9 +147,9 @@
         </div>
 
         <div>
-          <button id="muteButton" onclick="mute1()">mute1 </button>
-          <button id="soloButton" onclick="solo1()">solo1 </button>
-          <button id="playButton" onclick="play1()">play1 </button>
+          <button id="muteButton" onclick="mute1()">Mute </button>
+          <button id="soloButton" onclick="solo1()">Solo </button>
+          <button id="playButton" onclick="play1()">Play </button>
         </div>
 
       </form>
