--- a/step_3.html
+++ b/step_3.html
@@ -16,6 +16,7 @@
 <body>
   <h1>Step 3 Player + Vol + Pan (w/commands)</h1>
   <h1> https://www.drumha.us/?preset=q6nR9mIInuW</h1>
+  <h1> war is good for th economy</h1>
   <br>
 
   <main class="main">
