eq works perfect

--- a/step_5.html
+++ b/step_5.html
@@ -205,8 +205,9 @@
 
     <form action="js/step_5.js" class="form" id="form_EQ">
       <div>
-        <label for="filter_1_label">EQ</label>
+        <label for="filter_1_label">EQ</label><button id="eq_On_Off_Button_1" onclick="eqOnOff1()">On </button>
         <div>
+          
           <select name="filter_1" id="filter_1_select">
             <option name="lowpass" id="lowpass" value="lowpass">Lowpass</option>
             <option name="highpass" id="highpass" value="highpass">highpass</option>
