--- a/step_6.html
+++ b/step_6.html
@@ -7,21 +7,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="img/html.ico">
   <link rel="STYLESHEET" href="css/steps.css">
-  <title>Step 5 </title>
+  <title>Step 6 </title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h1>Step 5 Player + Vol + Pan + Recorder + EQ</h1>
+  <h1>Step 5 Player + Vol + Pan + Recorder + EQ + FX</h1>
   <br>
   Canopy
   <br>
 
   <main class="main">
     <div class="container">
-      <form action="js/step_5.js" class="form" id="formulario">
+      <form action="js/step_6.js" class="form" id="formulario">
         <div>
 
           <div>
@@ -205,7 +205,7 @@
     </div>
 
 
-    <form action="js/step_5.js" class="form" id="form_EQ">
+    <form action="js/step_6.js" class="form" id="form_EQ">
       <div>
         <label for="filter_1_label">EQ</label> <button id="eq_On_Off_Button_1" onclick="eqOnOff1()">On </button>
         <div>
@@ -237,8 +237,16 @@
           <input type='range' min=0 max=100 step='1' value="0" id='detune_1'>
           <p id="detune_1_value"></p>
         </div>
+        <div>
+          <h2>FX</h2>
+        </div>
+        <p id="player1_fxSend_1_text">Send FX 1 <input type='range' min=-40 max=12 step=1 value="0" id='player1_fxSend_1'>
+          <p id="player1_fxSend_1_value"></p>
+          </p>
+
+
       </div>
-      
+      </div>
   </main>
 
 
@@ -246,7 +254,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"
     integrity="sha512-jduERlz7En1IUZR54bqzpNI64AbffZWR//KJgF71SJ8D8/liKFZ+s1RxmUmB+bhCnIfzebdZsULwOrbVB5f3nQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="js/step_5.js"></script>
+  <script src="js/step_6.js"></script>
   <!--
     <script src="https://unpkg.com/tone"></script>
     -->
