--- a/contextcreatefromfoo.html
+++ b/contextcreatefromfoo.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-    <title>Randomizer</title>
+    <title>Ran</title>
 </head>
 <body>
     <h1>create from foo</h1>
+
+coragil, el coraje de pastillas que necesitan los giles
 
     <button id="playButton" onclick="startsSong()">Iniciar </button>
 
