--- a/step_6.html
+++ b/step_6.html
@@ -240,11 +240,26 @@
         <div>
           <h2>FX</h2>
         </div>
-        <p id="player1_fxSend_1_text">Send FX 1 <input type='range' min=-40 max=12 step=1 value="0" id='player1_fxSend_1'>
-          <p id="player1_fxSend_1_value"></p>
-          </p>
-
-
+        <p id="player1_fxSend_1_text">Send FX 1 <input type='range' min=-40 max=12 step=1 value="0"
+            id='player1_fxSend_1'>
+        <p id="player1_fxSend_1_value"></p>
+        </p>
+        <br>
+        <p id="player1_fxSend_2_text">Send FX 2 <input type='range' min=-40 max=12 step=1 value="0"
+          id='player1_fxSend_2'>
+      <p id="player1_fxSend_2_value"></p>
+      </p>
+      <br>
+      <p id="player1_fxSend_3_text">Send FX 3 <input type='range' min=-40 max=12 step=1 value="0"
+        id='player1_fxSend_3'>
+    <p id="player1_fxSend_3_value"></p>
+    </p>
+    <br>
+    <p id="player1_fxSend_4_text">Send FX 4 <input type='range' min=-40 max=12 step=1 value="0"
+      id='player1_fxSend_4'>
+  <p id="player1_fxSend_4_value"></p>
+  </p>
+  <br>
       </div>
       </div>
   </main>
