--- a/step_6.html
+++ b/step_6.html
@@ -237,26 +237,31 @@
           <input type='range' min=0 max=100 step='1' value="0" id='detune_1'>
           <p id="detune_1_value"></p>
         </div>
+        <br> <br>
         <div>
           <h2>FX</h2>
         </div>
-        <p id="player1_fxSend_1_text">Send FX 1 <input type='range' min=-40 max=12 step=1 value="0"
-            id='player1_fxSend_1'>
+
+        <p id="player1_fxSend_1_text">Send FX 1 Delay <button id="player1_fxSend_1_On_Off_Button" onclick="fxSend_1_OnOff1()">On </button>
+        <input type='range' min=-40 max=12 step=1 value="0" id='player1_fxSend_1'>
         <p id="player1_fxSend_1_value"></p>
         </p>
         <br>
-        <p id="player1_fxSend_2_text">Send FX 2 <input type='range' min=-40 max=12 step=1 value="0"
-          id='player1_fxSend_2'>
+        <p id="player1_fxSend_2_text">Send FX 2 Reverb 
+        <button id="player1_fxSend_2_On_Off_Button" onclick="fxSend_2_OnOff1()">On </button>
+        <input type='range' min=-40 max=12 step=1 value="0"  id='player1_fxSend_2'>
       <p id="player1_fxSend_2_value"></p>
       </p>
       <br>
-      <p id="player1_fxSend_3_text">Send FX 3 <input type='range' min=-40 max=12 step=1 value="0"
-        id='player1_fxSend_3'>
+      <p id="player1_fxSend_3_text">Send FX 3 Phaser
+        <button id="player1_fxSend_3_On_Off_Button" onclick="fxSend_3_OnOff1()">On </button>
+        <input type='range' min=-40 max=12 step=1 value="0" id='player1_fxSend_3'>
     <p id="player1_fxSend_3_value"></p>
     </p>
     <br>
-    <p id="player1_fxSend_4_text">Send FX 4 <input type='range' min=-40 max=12 step=1 value="0"
-      id='player1_fxSend_4'>
+    <p id="player1_fxSend_4_text">Send FX 4 PitchShift 
+      <button id="player1_fxSend_4_On_Off_Button" onclick="fxSend_4_OnOff1()">On </button>
+      <input type='range' min=-40 max=12 step=1 value="0" id='player1_fxSend_4'>
   <p id="player1_fxSend_4_value"></p>
   </p>
   <br>
