--- a/Test2.html
+++ b/Test2.html
@@ -208,9 +208,11 @@
     <p id="reverse_1_text">Reverse</p>
     <br>
     <p id="loop_start_1_text">loop start</p>
+    <input id="loop_start_1" type="number" min= "0" max="1234" placeholder="0 - 1234"/>
     <p id="loop_start_1_time"></p>
     <br>
     <p id="loop_end_1_text">loop end</p>
+    <input id="loop_end_1" type="number" min= "0" max="1234" placeholder="0 - 1234"/>
     <p id="loop_end_1_time"></p>
     <br>
     <p id="fadeIn_1_text">fadeIn</p>
