--- a/Test2.html
+++ b/Test2.html
@@ -208,17 +208,19 @@
     <p id="reverse_1_text">Reverse</p>
     <br>
     <p id="loop_start_1_text">loop start</p>
-    <input id="loop_start_1" type="number" min= "0" max="1234" placeholder="0 - 1234"/>
+    <input id="loop_start_1" type="number" min= "0" max="1234" />
     <p id="loop_start_1_time"></p>
     <br>
     <p id="loop_end_1_text">loop end</p>
-    <input id="loop_end_1" type="number" min= "0" max="1234" placeholder="0 - 1234"/>
+    <input id="loop_end_1" type="number" min= "0" max="1234" />
     <p id="loop_end_1_time"></p>
     <br>
     <p id="fadeIn_1_text">fadeIn</p>
+    <input id="fadeIn_1" type="number" min= "0" max="1234" />
     <p id="fadeIn_1_value"></p>
     <br>
     <p id="fadeOut_1_text">fadeOut</p>
+    <input id="fadeOut_1" type="number" min= "0" max="1234" />
     <p id="fadeOut_1_value"></p>
 
     <label for="filter_1_label">
@@ -314,7 +316,7 @@
 
     <label for="filter_fx1_label">
       <h1>EQ</h1>
-    </label> <button id="eq_On_Off_Button_fx1" onclick="eqOnOff1()">On </button>
+    </label> <button id="eq_On_Off_Button_fx1" onclick="eqOnOff_fx1()">On </button>
     <select name="filter_fx1" id="filter_fx1_select">
       <option name="lowpass" id="lowpass" value="lowpass">Lowpass</option>
       <option name="highpass" id="highpass" value="highpass">highpass</option>
