FX EQ not working

--- a/Test2.html
+++ b/Test2.html
@@ -272,7 +272,7 @@
     <input type='range' min=-40 max=12 step=1 value="-40" id='player1_fxSend_2'>
     <p id="player1_fxSend_2_value"></p>
     <br><br>
-    <p id="player1_fxSend_3_text"> FX 3 Phaser
+    <p id="player1_fxSend_3_text"> FX 3 FeedBack Delay
       <button id="player1_fxSend_3_On_Off_Button" onclick="fxSend_3_OnOff1()">On </button>
     </p>
     <br>
@@ -305,13 +305,13 @@
   <div class="column">
     <h2>FX 1</h2>
     <div>
-      <p id="volume_fx1_text">Vol<input type='range' min=-41 max=12 step='1' value="0" id='volume_fx1'>
-      <p id="volume_fx1_value"></p>
-      </p>
+      <p id="fx1_volume_text"> </p>
+        Vol<input type='range' min=-41 max=12 step='1' value="0" id='fx1_volume'>
+      <p id="fx1_volume_value"></p>
       <br>
       <p id="pan_fx1_text">Pan</p>
-      <input type='range' min=-1 max=1 step='0.02' value=0 id='pan_fx1_fader'>
-      <p id="pan_fx1_value"></p>
+      <input type='range' min=-1 max=1 step='0.02' value=0 id='fx1_pan_fader'>
+      <p id="fx1_pan_value"></p>
     </div>
 
     <label for="filter_fx1_label">
@@ -329,20 +329,20 @@
     </select>
     <br>
     <p id="frequency_fx1_text">Frequency </p>
-    <input type='range' min=20 max=20000 step='1' value="0" id='frequency_fx1'>
-    <p id="frequency_fx1_value"></p>
+    <input type='range' min=20 max=20000 step='1' value="0" id='fx1_frequency'>
+    <p id="fx1_frequency_value"></p>
     <br>
     <p id="Q_fx1_text">Q </p>
-    <input type='range' min=0 max=2 step=0.1 value="0" id='Q_fx1'>
-    <p id="Q_fx1_value"></p>
+    <input type='range' min=0 max=2 step=0.1 value="0" id='fx1_Q'>
+    <p id="fx1_Q_value"></p>
     <br>
     <p id="gain_fx1_text">Gain </p>
-    <input type='range' min=-30 max=12 step='1' value="-30" id='gain_fx1'>
-    <p id="gain_fx1_value"></p>
+    <input type='range' min=-30 max=12 step='1' value="-30" id='fx1_gain'>
+    <p id="fx1_gain_value"></p>
     <br>
-    <p id="detune_fx1_text">Detune </p>
-    <input type='range' min=0 max=100 step='1' value="0" id='detune_fx1'>
-    <p id="detune_fx1_value"></p>
+    <p id="fx1_detune_text">Detune </p>
+    <input type='range' min=0 max=100 step='1' value="0" id='fx1_detune'>
+    <p id="fx1_detune_value"></p>
 
 
 
